--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Jain Mohit"
+title                    : "Reflections"
 title_separator          : "-"
 name                     : "Jain Mohit"
 description              : "Data Science, NLP, Big data blogs"
