--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Projects"
-    url: /projects
-  - title: "Blog"
-    url: /blog/
+  #- title: "Projects"
+  #  url: /projects
+  #- title: "Blog"
+  #  url: /blog/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
