--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url                      : # the base hostname & protocol for your site e.g. "ht
 baseurl                  : "/reflections"
 repository               : "jmohit13/reflections"
 teaser                   : "/assets/images/banner-default.jpg"
-breadcrumbs              : true
+breadcrumbs              : false
 words_per_minute         : 200
 comments:
   provider               : "disqus"
