--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en"
 title                    : "Reflections"
 title_separator          : "-"
 name                     : "Jain Mohit"
-description              : "Data Science, NLP, Big data blogs"
+description              : "Deep learning, NLP, Big data"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/reflections"
 repository               : "jmohit13/reflections"
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Jain Mohit"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Science, NLP, Big data"
+  bio              : "Deep learning, NLP, Big data"
   location         : "Bangalore"
   email            :
   uri              :
@@ -183,6 +183,7 @@ gems:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
+  - jekyll-seo-tag
   - jemoji
 
 # mimic GitHub Pages with --safe
